objects/BusinessLicenseApplication.object
<CustomObject>
    <fields>
        <fullName>Application_Source__c</fullName>
        <label>Application Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Site_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Site Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Business License Applications</relationshipLabel>
        <relationshipName>Business_License_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coordinates__c</fullName>
        <label>Coordinates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delete_BLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete BLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasCoordinates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasCoordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicSector__CoordinatorEmail__c</fullName>
        <description>Email of the coordinator</description>
        <label>Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PublicSector__CoordinatorName__c</fullName>
        <description>Name of the coordinator</description>
        <label>Coordinator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__CoordinatorPhone__c</fullName>
        <description>Phone of the coordinator</description>
        <label>Coordinator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PublicSector__CoordinatorTitle__c</fullName>
        <label>Coordinator Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicSector__FacilitySquareFootage__c</fullName>
        <label>Facility Square Footage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__HasEmployeeScreeningPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Employee Screening (temperature checks, health checks, etc.)</inlineHelpText>
        <label>Has Employee Screening Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicSector__HasFacilitySanitationPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cleaning / Sanitation (thorough cleaning in high traffic areas, with frequent disinfection of commonly used surfaces)</inlineHelpText>
        <label>Has Facility Sanitation Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicSector__HasPersonalProtectiveEquipment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Personal protective equipment (PPE) for employees (face coverings and all required protective equipment, including eye protection and gloves, where necessary)</inlineHelpText>
        <label>Has Personal Protective Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicSector__HasSocialDistancingPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Social distancing (measures to ensure physical distancing of at least six feet between workers and customers)</inlineHelpText>
        <label>Has Social Distancing Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicSector__HasVulnerablePopulationPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vulnerable population accommodations such as special hours for seniors or medically vulnerable individuals</inlineHelpText>
        <label>Has Vulnerable Population Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublicSector__MaximumApprovedOccupancy__c</fullName>
        <inlineHelpText>Facility Capacity (maximum per fire marshall)</inlineHelpText>
        <label>Maximum Approved Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__OccupancySocialDistancing__c</fullName>
        <inlineHelpText>Facility Capacity with Social Distancing Measures</inlineHelpText>
        <label>Occupancy with Social Distancing Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublicSector__ReopeningDate__c</fullName>
        <description>Reopening date</description>
        <label>Reopening Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublicSector__ReopeningPermitType__c</fullName>
        <label>Reopening Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Curbside Service</fullName>
                </value>
                <value>
                    <fullName>Indoor Operation</fullName>
                </value>
                <value>
                    <fullName>Outdoor Operation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicSector__SocialDistancingPlanDesc__c</fullName>
        <inlineHelpText>Describe the steps you are taking to ensure social distancing both inside and outside your location</inlineHelpText>
        <label>Describe Social Distancing Plan</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Work__c</fullName>
        <label>Type of Work</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building Expansion</fullName>
                </value>
                <value>
                    <fullName>Building Demolition</fullName>
                </value>
                <value>
                    <fullName>Removal of a Tree</fullName>
                </value>
                <value>
                    <fullName>Removal of a Tree Stump</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Entity_Information__c</fullName>
        <label>Work Entity Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Property Owner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_BusinessLicenseApplication</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>LicenseType</columns>
        <columns>AppliedDate</columns>
        <columns>Status</columns>
        <columns>Delete_BLA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Business License Applications</label>
    </listViews>
    <listViews>
        <fullName>GPS_Application_Reviewers_BusinessLicenseApplication</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>LicenseType</columns>
        <columns>AppliedDate</columns>
        <columns>Status</columns>
        <filterScope>Queue</filterScope>
        <label>Application Reviewers</label>
        <queue>GPS_Application_Reviewers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>License_or_Permit</fullName>
        <active>true</active>
        <description>Used for all BLAs</description>
        <label>License or Permit</label>
    </recordTypes>
    <recordTypes>
        <fullName>PublicSector__Reopening_Permit_Request</fullName>
        <active>true</active>
        <label>Reopening Permit Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>